Fix GlobalNavbar on small viewports

--- a/src/search/input/MainPage.scss
+++ b/src/search/input/MainPage.scss
@@ -39,7 +39,7 @@ body.main-page {
             top: 1rem;
         }
     }
-    .e2e-tooltip-content {
+    .hover-overlay__content.hover-overlay__row {
         p {
             font-size: 14px !important;
         }
